# keymashed

./: Cargo.toml  README.md
bpf/: README.md  bpf.c  setup-tc.sh
media/dct/: gen.py
rust-louder/: build.rs  wrapper.h
rust-louder/src/: main.rs
rust-userspace/: Cargo.toml  README.md  rust-toolchain.toml  rustc-ice-2024-12-19T06_34_59-106147.txt
rust-userspace/benches/: rtp.rs
rust-userspace/src/: audio.rs  bpf.rs  cli.rs  lib.rs  main.rs  rtp.rs  video.rs  wpm.rs
rust-userspace/src/video/: mod.rs
rust-userspace/src/video/dct/: mod.rs
screamd/: bpf.c  bpf_api.h
screamd/bpf/: README.md  bpf.c  bpf2.c  bpf_api.h  bpf_elf.h
screamd/rust-userspace/: Cargo.toml
screamd/rust-userspace/src/: cli.rs  main.rs  multimedia.rs  rtp.rs
screamd/userspace/: Cargo.toml  build.zig  build.zig.zon
screamd/userspace/src/: main.zig  mic.zig
screamd/userspace/src/include/bpf/: bpf_api.h
screamd/userspace/src/include/miniaudio/: miniaudio.h
screamd/zig-userspace/: build.zig  flake.nix  out.txt
screamd/zig-userspace/src/: main.zig  mic.zig  procmgr.zig
src/: main.rs
zig-louder/: .gitignore  build.zig  flake.nix
zig-louder/src/: main.zig  mic.zig  procmgr.zig
