[package]
name = "rust_userspace"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[[bench]]
name = "rtp"
harness = false

[dependencies]
bytes = "1.8.0"
criterion = "0.5.1"
crossterm = "0.28.1"
fft2d = { version = "0.1.1", features = ["rustdct"] }
libbpf-sys = "1.5.0"
libc = "0.2.167"
log = "0.4.22"
memmap = "0.7.0"
rand = "0.8.5"
ratatui = "0.29.0"
rayon = "1.10.0"
rscam = "0.5.5"
sdl2 = { version = "0.37.0", features = ["image"] }
simplelog = "0.12.2"
video-rs = "0.10.3"
zerocopy = { version = "0.8.11", features = ["derive"] }
